# cc-haha

./: .gitignore  AGENTS.md  CONTRIBUTING.md  package.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build-desktop-dev.yml  pr-quality.yml  release-desktop.yml
adapters/: README.md  package.json
adapters/common/: config.ts  http-client.ts  pairing.ts
adapters/common/__tests__/: config.test.ts  http-client.test.ts
adapters/common/attachment/: attachment-types.ts
adapters/feishu/: index.ts
adapters/telegram/: index.ts
adapters/wechat/: index.ts  protocol.ts
adapters/wechat/__tests__/: protocol.test.ts
desktop/: package.json  vite.config.ts
desktop/scripts/: build-macos-arm64.sh
desktop/sidecars/: claude-sidecar.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  macos_notifications.m
desktop/src/__tests__/: agentsSettings.test.tsx  generalSettings.test.tsx  pages.test.tsx  (+1 more)
docs/.vitepress/: config.mts
docs/desktop/: 05-FAQ.md
docs/guide/: contributing.md  env-vars.md  third-party-models.md
docs/im/: index.md  wechat.md
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.9.md
scripts/git-hooks/: install.test.ts  install.ts  pre-push
scripts/pr/: quality-contract.test.ts
scripts/quality-gate/: coverage-baseline.json  coverage-thresholds.json  coverage.test.ts  coverage.ts  modes.ts  runner.test.ts
src/: main.tsx
src/cli/: print.ts
src/server/: index.ts  router.ts
src/utils/: context.ts  worktree.ts
(+76 files in other folders)
